Upstreaming some fixes for broken packages and dependencies Linux kernel is now patched with correct camera engine source headers Camera engine has correct IQFile now uboot make script fixed The correct libmali version is installed by patching the makefile since it's already provided by Buildroot Missing libmali symbolic links now present Image generation is now done correctly Root password is "vonvision". Fixed SSH login prompt Renamed DTS files accordingly

--- a/configs/von_defconfig
+++ b/configs/von_defconfig
@@ -3,7 +3,6 @@
 # Buildroot 2022.08.2-dirty Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
-BR2_EXTERNAL_RK3308_PATH="/home/avi/Buildroot/buildroot.rockchip.ext"
 BR2_HOST_GCC_AT_LEAST_4_9=y
 BR2_HOST_GCC_AT_LEAST_5=y
 BR2_HOST_GCC_AT_LEAST_6=y
@@ -302,7 +301,6 @@ BR2_BZCAT="bzcat"
 BR2_XZCAT="xzcat"
 BR2_LZCAT="lzip -d -c"
 BR2_TAR_OPTIONS=""
-BR2_DEFCONFIG="/home/avi/Buildroot/buildroot.rockchip.ext/configs/cm3_defconfig"
 BR2_DL_DIR="$(BASE_DIR)/../../buildroot.dl"
 BR2_HOST_DIR="$(BASE_DIR)/host"
 
@@ -338,7 +336,7 @@ BR2_OPTIMIZE_S=y
 BR2_SHARED_LIBS=y
 # BR2_SHARED_STATIC_LIBS is not set
 BR2_PACKAGE_OVERRIDE_FILE="$(CONFIG_DIR)/local.mk"
-BR2_GLOBAL_PATCH_DIR="$(BR2_EXTERNAL)/patches.cm3"
+BR2_GLOBAL_PATCH_DIR="$(BR2_EXTERNAL)/patches.von"
 
 #
 # Advanced
@@ -372,7 +370,7 @@ BR2_FORTIFY_SOURCE_1=y
 BR2_ROOTFS_SKELETON_DEFAULT=y
 # BR2_ROOTFS_SKELETON_CUSTOM is not set
 BR2_TARGET_GENERIC_HOSTNAME="von_vision_ai"
-BR2_TARGET_GENERIC_ISSUE="Welcome!"
+BR2_TARGET_GENERIC_ISSUE="Welcome! Thanks for using Von Vision!"
 BR2_TARGET_GENERIC_PASSWD_SHA256=y
 # BR2_TARGET_GENERIC_PASSWD_SHA512 is not set
 BR2_TARGET_GENERIC_PASSWD_METHOD="sha-256"
@@ -390,7 +388,7 @@ BR2_ROOTFS_DEVICE_TABLE="system/device_table.txt"
 # BR2_ROOTFS_DEVICE_TABLE_SUPPORTS_EXTENDED_ATTRIBUTES is not set
 BR2_ROOTFS_MERGED_USR=y
 BR2_TARGET_ENABLE_ROOT_LOGIN=y
-BR2_TARGET_GENERIC_ROOT_PASSWD=""
+BR2_TARGET_GENERIC_ROOT_PASSWD="vonvision"
 BR2_SYSTEM_BIN_SH_BUSYBOX=y
 # BR2_SYSTEM_BIN_SH_BASH is not set
 # BR2_SYSTEM_BIN_SH_DASH is not set
@@ -419,9 +417,9 @@ BR2_TARGET_LOCALTIME="Etc/UTC"
 BR2_ROOTFS_USERS_TABLES=""
 BR2_ROOTFS_OVERLAY="$(BR2_EXTERNAL)/overlays"
 BR2_ROOTFS_PRE_BUILD_SCRIPT=""
-BR2_ROOTFS_POST_BUILD_SCRIPT="$(BR2_EXTERNAL)/board/RK3566.cm3/post-build.sh"
+BR2_ROOTFS_POST_BUILD_SCRIPT="$(BR2_EXTERNAL)/board/RK3566.von/post-build.sh"
 BR2_ROOTFS_POST_FAKEROOT_SCRIPT=""
-BR2_ROOTFS_POST_IMAGE_SCRIPT="$(BR2_EXTERNAL)/board/RK3566.cm3/post-image.sh $(BR2_EXTERNAL)/swu-make.sh"
+BR2_ROOTFS_POST_IMAGE_SCRIPT="$(BR2_EXTERNAL)/board/RK3566.von/post-image.sh $(BR2_EXTERNAL)/swu-make.sh"
 BR2_ROOTFS_POST_SCRIPT_ARGS=""
 
 #
@@ -439,13 +437,13 @@ BR2_LINUX_KERNEL_CUSTOM_GIT=y
 BR2_LINUX_KERNEL_CUSTOM_REPO_URL="https://github.com/radxa/kernel.git"
 BR2_LINUX_KERNEL_CUSTOM_REPO_VERSION="f0b4c3d6f86f433280662a6158e0bc1b4d83503a"
 BR2_LINUX_KERNEL_VERSION="f0b4c3d6f86f433280662a6158e0bc1b4d83503a"
-BR2_LINUX_KERNEL_PATCH="$(BR2_EXTERNAL_RK3308_PATH)/package/linux"
+BR2_LINUX_KERNEL_PATCH="$(BR2_EXTERNAL)/package/linux"
 BR2_LINUX_KERNEL_USE_DEFCONFIG=y
 # BR2_LINUX_KERNEL_USE_ARCH_DEFAULT_CONFIG is not set
 # BR2_LINUX_KERNEL_USE_CUSTOM_CONFIG is not set
 BR2_LINUX_KERNEL_DEFCONFIG="rockchip_linux"
 BR2_LINUX_KERNEL_CONFIG_FRAGMENT_FILES=" $(BR2_EXTERNAL)/package/example-module-overlay/module-overlay/kernel.fragment"
-BR2_LINUX_KERNEL_CUSTOM_LOGO_PATH="/home/avi/SDKNEW/SDK/kernel/logo.bmp"
+BR2_LINUX_KERNEL_CUSTOM_LOGO_PATH=""
 BR2_LINUX_KERNEL_IMAGE=y
 # BR2_LINUX_KERNEL_IMAGEGZ is not set
 # BR2_LINUX_KERNEL_VMLINUX is not set
@@ -459,7 +457,7 @@ BR2_LINUX_KERNEL_GZIP=y
 BR2_LINUX_KERNEL_DTS_SUPPORT=y
 # BR2_LINUX_KERNEL_DTB_IS_SELF_BUILT is not set
 BR2_LINUX_KERNEL_INTREE_DTS_NAME=""
-BR2_LINUX_KERNEL_CUSTOM_DTS_PATH=" $(BR2_EXTERNAL_RK3308_PATH)/package/linux/dts/rockchip/rk3566-radxa-cm3-io.dts $(BR2_EXTERNAL_RK3308_PATH)/package/linux/dts/rockchip/*"
+BR2_LINUX_KERNEL_CUSTOM_DTS_PATH=" $(BR2_EXTERNAL)/package/linux/dts/rockchip/rk3566-von.dts $(BR2_EXTERNAL)/package/linux/dts/rockchip/*"
 BR2_LINUX_KERNEL_DTB_KEEP_DIRNAME=y
 # BR2_LINUX_KERNEL_DTB_OVERLAY_SUPPORT is not set
 # BR2_LINUX_KERNEL_INSTALL_TARGET is not set
@@ -491,7 +489,7 @@ BR2_LINUX_KERNEL_DTB_KEEP_DIRNAME=y
 #
 BR2_PACKAGE_BUSYBOX=y
 BR2_PACKAGE_BUSYBOX_CONFIG="package/busybox/busybox.config"
-BR2_PACKAGE_BUSYBOX_CONFIG_FRAGMENT_FILES="$(BR2_EXTERNAL)/board/RK3566.cm3/busybox.fragment"
+BR2_PACKAGE_BUSYBOX_CONFIG_FRAGMENT_FILES="$(BR2_EXTERNAL)/board/RK3566.von/busybox.fragment"
 BR2_PACKAGE_BUSYBOX_SHOW_OTHERS=y
 # BR2_PACKAGE_BUSYBOX_INDIVIDUAL_BINARIES is not set
 # BR2_PACKAGE_BUSYBOX_WATCHDOG is not set
@@ -4510,7 +4508,7 @@ BR2_TARGET_UBOOT_PATCH=""
 BR2_TARGET_UBOOT_USE_DEFCONFIG=y
 # BR2_TARGET_UBOOT_USE_CUSTOM_CONFIG is not set
 BR2_TARGET_UBOOT_BOARD_DEFCONFIG="rk3566"
-BR2_TARGET_UBOOT_CONFIG_FRAGMENT_FILES="$(BR2_EXTERNAL)/board/RK3566.cm3/uboot.fragment"
+BR2_TARGET_UBOOT_CONFIG_FRAGMENT_FILES="$(BR2_EXTERNAL)/board/RK3566.von/uboot.fragment"
 # BR2_TARGET_UBOOT_NEEDS_DTC is not set
 # BR2_TARGET_UBOOT_NEEDS_PYTHON3 is not set
 # BR2_TARGET_UBOOT_NEEDS_PYLIBFDT is not set
@@ -5380,7 +5378,7 @@ BR2_TARGET_UBOOT_CUSTOM_PATCH_DIR=""
 #
 
 #
-# RK3308 (in /home/avi/Buildroot/buildroot.rockchip.ext)
+# 
 #
 
 #
@@ -5414,7 +5412,7 @@ BR2_PACKAGE_SDL3=y
 BR2_PACKAGE_CAMERA_ENGINE_RKAIQ=y
 BR2_PACKAGE_RK356X=y
 BR2_PACKAGE_CAMERA_ENGINE_RKAIQ_FORCE_INSTALL_TO_ROOTFS=y
-BR2_PACKAGE_CAMERA_ENGINE_RKAIQ_IQFILE="imx586.json"
+BR2_PACKAGE_CAMERA_ENGINE_RKAIQ_IQFILE="imx586_CMK-OT1607-FV1_M12-40IRC-4MP-F16.json"
 # BR2_PACKAGE_CAMERA_ENGINE_RKAIQ_IQFILE_USE_BIN is not set
 BR2_PACKAGE_CAMERA_ENGINE_RKAIQ_FAKE_CAMERA_IQFILE=""
 # BR2_PACKAGE_CAMERA_ENGINE_RKAIQ_RKISP_DEMO is not set
