--- a/package/linux/dts/rockchip/rk3566-von.dtsi
+++ b/package/linux/dts/rockchip/rk3566-von.dtsi
@@ -1,7 +1,7 @@
 // SPDX-License-Identifier: (GPL-2.0+ OR MIT)
 /*
  * Copyright (c) 2020 Rockchip Electronics Co., Ltd.
- * Copyright (c) 2021 Radxa Limited.
+ * 
  *
  */
 
@@ -16,7 +16,7 @@
 #include "rk3566.dtsi"
 
 / {
-	compatible = "radxa,rock-3-compute-module", "rockchip,rk3566";
+	compatible = "von,von", "rockchip,rk3566";
 
 	fiq_debugger: fiq-debugger {
 		compatible = "rockchip,fiq-debugger";
