Fixed Box64, GL4ES and Libnotify dependencies and settings. Added appropiate post-install scripts for GL4ES. GL4ES now provides LIBGL. Added BINFMT_MISC for Linux Kernel, requirement for Box64. Switched display to HDMI. Added missing GL4ES installs for staging directory. Testing different RGA version.

--- a/configs/von_defconfig
+++ b/configs/von_defconfig
@@ -4304,7 +4304,7 @@ BR2_PACKAGE_SYSTEMD=y
 # BR2_PACKAGE_SYSTEMD_ANALYZE is not set
 # BR2_PACKAGE_SYSTEMD_JOURNAL_REMOTE is not set
 # BR2_PACKAGE_SYSTEMD_BACKLIGHT is not set
-# BR2_PACKAGE_SYSTEMD_BINFMT is not set
+BR2_PACKAGE_SYSTEMD_BINFMT=y
 # BR2_PACKAGE_SYSTEMD_COREDUMP is not set
 BR2_PACKAGE_SYSTEMD_PSTORE=y
 # BR2_PACKAGE_SYSTEMD_FIRSTBOOT is not set
@@ -4627,7 +4627,7 @@ BR2_PACKAGE_HOST_PYTHON3_SSL=y
 BR2_PACKAGE_HOST_QEMU_ARCH_SUPPORTS=y
 BR2_PACKAGE_HOST_QEMU_SYSTEM_ARCH_SUPPORTS=y
 BR2_PACKAGE_HOST_QEMU_USER_ARCH_SUPPORTS=y
-
+BR2_PACKAGE_HOST_QEMU=y
 #
 # host-qemu needs a host gcc >= 8
 #
