--- a/package/libnotify/Config.in
+++ b/package/libnotify/Config.in
@@ -1,5 +1,7 @@
 menuconfig BR2_PACKAGE_LIBNOTIFY
 	bool "LIBNOTIFY"
+	select BR2_PACKAGE_LIBGTK3
+	select BR2_PACKAGE_GOBJECT_INTROSPECTION
 	help
 	  LIBNOTIFY
 
