Fixed pkg-config installs Added GOBJECT-INTROSPECTION to defconfig Added new install scripts for new rockchip-rga install Fixed missing dependencies

--- a/configs/von_defconfig
+++ b/configs/von_defconfig
@@ -3523,7 +3523,7 @@ BR2_PACKAGE_RTMPDUMP=y
 # BR2_PACKAGE_GLM is not set
 BR2_PACKAGE_GMP=y
 BR2_PACKAGE_GOBJECT_INTROSPECTION_ARCH_SUPPORTS=y
-
+BR2_PACKAGE_GOBJECT_INTROSPECTION=y
 #
 # gobject-introspection needs a glibc toolchain, gcc >= 4.9, host gcc >= 8
 #
@@ -4628,6 +4628,7 @@ BR2_PACKAGE_HOST_QEMU_ARCH_SUPPORTS=y
 BR2_PACKAGE_HOST_QEMU_SYSTEM_ARCH_SUPPORTS=y
 BR2_PACKAGE_HOST_QEMU_USER_ARCH_SUPPORTS=y
 BR2_PACKAGE_HOST_QEMU=y
+BR2_PACKAGE_HOST_QEMU_SYSTEM_MODE=y
 #
 # host-qemu needs a host gcc >= 8
 #
