Added GL4ES to default defconfig

--- a/configs/von_defconfig
+++ b/configs/von_defconfig
@@ -5419,3 +5419,4 @@ BR2_PACKAGE_CAMERA_ENGINE_RKAIQ_FAKE_CAMERA_IQFILE=""
 # BR2_PACKAGE_CAMERA_ENGINE_RKAIQ_RKISP_DEMO is not set
 # BR2_PACKAGE_MALI_UPDATE is not set
 BR2_PACKAGE_XDRIVER_XF86_VIDEO_ARMSOC=y
+BR2_PACKAGE_GL4ES=y
